<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/picture_food" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/textView_appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="0" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="onSignUpButton"
        android:text="@string/signup_button"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="onLoginButton"
        android:text="@string/login_button"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_guest"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="onGuestButton"
        android:text="@string/guest_button"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/textView_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:text="@string/author"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/textView_disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/disclaimer"
        android:textSize="16sp" />

</LinearLayout>